--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* Universal styles */
 body {
-    background-image: url("https://wallpapercave.com/wp/OGoOmxs.jpg");
+    background-image: url("https://image.ibb.co/b83AJV/OGoOmxs.jpg");
     background-attachment: fixed;
     background-size: 100vw 100vh;
 }
